# FarDroid

./: CMakeLists.txt  MyStr.cpp  ThreadPool.cpp  ThreadPool.h  fardroid.cpp  fardroid.h  fardroid.rc  fardroidPlugin.cpp  fardroidPlugin.h  myrtl.cpp  stdafx.cpp  stdafx.h  stuffs.cpp  stuffs.h  taskbarIcon.cpp  version.info
includes/FARUnicode/: eplugin.hpp
